--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
         </div>
     </div>
     <div id="player-log"></div>
+    <div class="objective-wrap" id="objective-wrap">
+        <div></div>
+        <div><div class="objective-title">Objective:</div><div class="objective-desc" id="objective-desc"></div></div>
+        <div></div>
+    </div>
     <script type="module" src="./code.js"></script>
 </body>
 </html>
