--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
         <div>
             <span class="title">Welcome to the game!</span><br>
             <span class="subtitle">
-                WASD - move;<br>
-                Mouse - look;<br>
-                LMB - shoot;<br>
+                WASD - move | Mouse - look<br>
+                LMB - shoot | F - kickback<br>
                 Q - switch weapon<br>
                 P - pause
             </span>
